--- a/application/service-one/pom.xml
+++ b/application/service-one/pom.xml
@@ -20,11 +20,11 @@
   </parent>
 
   <properties>
-    <swagger.version>3.0.0-SNAPSHOT</swagger.version>
+    <swagger.version>3.0.0</swagger.version> <!-- Updated to stable version -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-  </properties>
+</properties>
 
   <dependencies>
     <!-- Management API -->
